[package]
name = "egui_node_graph2_example"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.29"
egui_glow = "0.29"
egui_node_graph2 = { path = "../egui_node_graph2" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]
