[package]
name = "Synthi"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
eframe = "0.29"
egui_node_graph2 = "0.6.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }

[features]
default = []
persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]
