[package]
name = "synthi"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
eframe = "0.28"
egui_node_graph2 = "0.6.0"
anyhow = "1.0"
serde = { version = "1.0", optional = true }
rodio = "0.19.0"
noise = "0.9.0"
rand = "0.8.5"

[features]
default = []
persistence = ["serde", "egui_node_graph2/persistence", "eframe/persistence"]
